# study_of_tests

./: pyproject.toml
study_of_tests/: capitalize.py
tests/: test_capitalize.py
