[tool.poetry]
name = "study-of-tests"
version = "0.1.0"
description = ""
authors = ["Yuriy Y <monkcrazy91@gmail.com>"]
readme = "README.md"
packages = [{include = "study_of_tests"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
